# git_mongoose

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.c  main.cpp  mongoose_example.cbp  publish_subscribe  publish_subscribe.c
demo_mongoose_example/: mongoose_server_client.c  mongoose_timers_main.cpp
include/: mongoose.h
src/: mongoose.c
